implement the burger menu

--- a/css/reset.css
+++ b/css/reset.css
@@ -43,6 +43,14 @@ select {
   font: inherit;
 }
 
+button {
+  background-color: transparent;
+  padding: 0;
+  margin: 0;
+  border: none;
+  cursor: pointer;
+}
+
 @media (favors-reduced-motion: reduce) {
   *,
   * ::before,
